Added new responsibility
New Responsibility has be been added

--- a/assignment5Sep_styled.html
+++ b/assignment5Sep_styled.html
@@ -56,6 +56,10 @@
     Ability to work with people at all levels in the program
 </li>
 
+<li> 
+    Knowledge of MongoDb and expressJs
+</li>
+
 
 </ul>
    
