--- a/index.html
+++ b/index.html
@@ -5,16 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
     <!--Cdn link here-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css">
 </head>
-<body>
-
-    <!--icon link from font awesome--> <span>Mohit sharma</span>
+<body >
+<div class="body2">
+    <i class="fa fa-user" aria-hidden="true">&nbsp;&nbsp;</i> <span><strong>Mohit sharma</strong></span>
     &nbsp;&nbsp;
-    <span>Mohit sharma</span>
+    <i class="fa fa-phone-square" aria-hidden="true"></i>&nbsp;&nbsp;<span><strong>+917098765432</strong></span>
+    &nbsp;&nbsp;
+    <i class="fa fa-envelope" aria-hidden="true"></i>&nbsp;&nbsp;<span><strong>mohitsharma@mail.com</strong></span>
     <br><br>
-    <iframe src="" height="" width=""></iframe>
-    <br><br>
-    <span>follow me</span>
+    <iframe src="" height="500px" width="900px"></iframe>
+    <br><br>    
+    <span><strong>Follow me on</strong></span>
+    &nbsp;&nbsp;
+  
+        <span><a href="#" class="fa fa-linkedin"></a></i></span>
+         &nbsp;&nbsp;
+        <span><a href="#" class="fa fa-facebook"></a></i></span>
+         &nbsp;&nbsp;
+        <span><a href="#" class="fa fa-instagram"></a></i></span>
+        &nbsp;&nbsp;
+        <span><a href="#" class="fa fa-google"></a></i></span>
+    
+</div>
     
 </body>
 </html>
