--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <br><br>
     <iframe src="" height="500px" width="900px"></iframe>
     <br><br>    
-    <span><strong>Follow me on</strong></span>
+    <span><strong>Follow me</strong></span>
     &nbsp;&nbsp;
   
         <span><a href="#" class="fa fa-linkedin"></a></i></span>
