--- a/Home.html
+++ b/Home.html
@@ -4,16 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Professional Summary</title>
+<!-- font cdn -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&family=Roboto:wght@500&display=swap" rel="stylesheet">
+<!-- font cdn end -->
+
+
     <style>
         .heading{
 
             color: black;
             background-color: yellow;
+            font-family: 'Roboto', sans-serif;
+            text-transform: uppercase;
+            letter-spacing: 4px;
 
         }
         .headinpara{
 
-            text-transform: uppercase;
+            
+            font-family: 'Poppins', sans-serif;
 
         }
 
@@ -33,6 +44,7 @@
         .bullettext{
 
             color:blue;
+            font-family: 'Poppins', sans-serif;
         }
         
 
