--- a/project.html
+++ b/project.html
@@ -12,7 +12,7 @@
     <hr>
     <p style="font-weight: 800;">Name: <u>Student Management</u></p>
     <p><U style="font-weight: 800;">Enviornment:</U> <mark style="color= yellow; font-weight: 800;">Angualar 8, TypeScript, JavaScript(E6), Html5, CSS, Bootstrap, Github, Desktop Github, Agile and JIRA, IDE - VS Code</mark></p>
-    <p><text style="font-weight: 800;">Team Size: 06</text> &nbsp; &nbsp;&nbsp;&nbsp;</p>
+    <p><text style="font-weight: 800;">Team Size: 06</text></p>
     <p><text style="font-weight: 800;">Project Description:</text> <text style="font-weight: 500;">This project is mainly used for student management in colleges, where It help to manage student record like student registration, student update information and to see all his or her academic activities like score card, attendance.</text></p>
     <hr>
     <p style="font-weight: 800;"> Roles and Responsibilities:</p>
