--- a/idCard.html
+++ b/idCard.html
@@ -29,7 +29,7 @@
             width: 130px;
             left:30%;
             margin-top: 18px;
-            border: 3px solid cadetblue;
+            border: 3px solid rgb(60, 96, 97);
             padding: 8px;
             border-radius: 200px;
         }
